# vkcompute

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: docs.yml
chapters/ch01_hello_compute/: CMakeLists.txt  main.c
chapters/ch02_buffers/: CMakeLists.txt  main.c
chapters/ch02_buffers/shaders/: square.comp
chapters/ch03_descriptors/: CMakeLists.txt  main.c
chapters/ch03_descriptors/shaders/: transform.comp
chapters/ch04_pipelines/: CMakeLists.txt  main.c
chapters/ch04_pipelines/shaders/: add.comp  multiply.comp  sqrt.comp  square.comp
chapters/ch05_synchronization/: CMakeLists.txt  main.c
chapters/ch05_synchronization/shaders/: increment.comp
chapters/ch06_memory/: CMakeLists.txt  main.c
chapters/ch06_memory/shaders/: double.comp
chapters/ch07_push_constants/: CMakeLists.txt  main.c
chapters/ch07_push_constants/shaders/: transform.comp
chapters/ch08_specialization/: CMakeLists.txt  main.c
chapters/ch08_specialization/shaders/: compute.comp
chapters/ch09_subgroups/: CMakeLists.txt  main.c
chapters/ch09_subgroups/shaders/: reduce.comp
chapters/ch10_debugging/: CMakeLists.txt  main.c
chapters/ch10_debugging/shaders/: compute.comp
common/: CMakeLists.txt
common/include/: vk_utils.h
common/src/: vk_utils.c
docs/: mkdocs.yml
docs/docs/: index.md  installation.md  introduction.md
docs/docs/chapters/: ch01_hello_compute.md  ch02_buffers.md  ch03_descriptors.md  ch04_pipelines.md  ch05_synchronization.md  ch06_memory.md  ch07_push_constants.md  ch08_specialization.md  ch09_subgroups.md  ch10_debugging.md
docs/docs/javascripts/: font-switcher.js
docs/docs/stylesheets/: fonts.css
docs/site/: 404.html  index.html
docs/site/chapters/ch01_hello_compute/: index.html
docs/site/chapters/ch02_buffers/: index.html
docs/site/chapters/ch03_descriptors/: index.html
docs/site/chapters/ch04_pipelines/: index.html
docs/site/chapters/ch05_synchronization/: index.html
docs/site/chapters/ch06_memory/: index.html
docs/site/chapters/ch07_push_constants/: index.html
docs/site/chapters/ch08_specialization/: index.html
docs/site/chapters/ch09_subgroups/: index.html
docs/site/chapters/ch10_debugging/: index.html
docs/site/installation/: index.html
docs/site/introduction/: index.html
docs/site/search/: search_index.json
episodes/ep01_hello_compute/: CMakeLists.txt  main.c
episodes/ep01_hello_compute/shaders/: double.comp
episodes/ep02_buffers/: CMakeLists.txt  main.c
episodes/ep02_buffers/shaders/: square.comp
episodes/ep03_descriptors/: CMakeLists.txt  main.c
episodes/ep03_descriptors/shaders/: transform.comp
episodes/ep04_pipelines/: CMakeLists.txt  main.c
episodes/ep04_pipelines/shaders/: add.comp  multiply.comp  sqrt.comp  square.comp
episodes/ep05_synchronization/: CMakeLists.txt  main.c
episodes/ep05_synchronization/shaders/: increment.comp
episodes/ep06_memory/: CMakeLists.txt  main.c
episodes/ep06_memory/shaders/: double.comp
episodes/ep07_push_constants/: CMakeLists.txt  main.c
episodes/ep07_push_constants/shaders/: transform.comp
episodes/ep08_specialization/: CMakeLists.txt  main.c
episodes/ep08_specialization/shaders/: compute.comp
episodes/ep09_subgroups/: CMakeLists.txt  main.c
episodes/ep09_subgroups/shaders/: reduce.comp
episodes/ep10_debugging/: CMakeLists.txt  main.c
episodes/ep10_debugging/shaders/: compute.comp
vkc/: CMakeLists.txt
vkc/include/: file_utils.h  vk_init.h  vk_utils.h
vkc/src/: file_utils.c  vk_init.c  vk_utils.c
